日付フォーマットのテスト

--- a/FrontEnd/src/app/catan/player/register-player-dialog/register-player-dialog.component.scss
+++ b/FrontEnd/src/app/catan/player/register-player-dialog/register-player-dialog.component.scss
@@ -27,3 +27,12 @@ img {
     }
   }
 }
+/* 日付ピッカーの日部分を非表示にする */
+::ng-deep .mat-calendar-body-cell-content {
+  display: none;
+}
+
+/* 日付部分のみに対するカスタムスタイルが適用されるようにします */
+::ng-deep .mat-calendar-body .mat-calendar-body-cell-content {
+  font-size: 0; /* 文字を非表示に */
+}
