excel読み込みテスト

--- a/FrontEnd/src/app/catan/catan-home/catan-home.component.html
+++ b/FrontEnd/src/app/catan/catan-home/catan-home.component.html
@@ -1,3 +1,5 @@
 <div class="container">
   <img src="images/home.png" />
+  <button mat-button (click)="fileInput.click()">ファイルを選択</button>
+  <input type="file" #fileInput style="display: none" (change)="readExcel($event)" />
 </div>
