--- a/FrontEnd/src/app/catan/catan-home/catan-home.component.scss
+++ b/FrontEnd/src/app/catan/catan-home/catan-home.component.scss
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  flex-flow: column;
   align-items: center;
   justify-content: center;
   height: 70%;
@@ -13,4 +14,5 @@ img {
   display: flex;
   flex-flow: column;
   justify-content: center;
+  width: 2000px;
 }
