--- a/FrontEnd/src/app/catan/catan-home/catan-home.component.html
+++ b/FrontEnd/src/app/catan/catan-home/catan-home.component.html
@@ -5,17 +5,19 @@
     <input type="file" #fileInput style="display: none" (change)="readExcel($event)" />
     <h2 class="progress">{{ progress }}</h2>
     <h3 class="sheet-name">{{ sheetName }}シート</h3>
-    <table>
-      <thead>
-        <tr>
-          <th *ngFor="let title of columnsTitle">{{ title }}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let row of data">
-          <td *ngFor="let cell of row">{{ cell }}</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-container">
+      <table>
+        <thead>
+          <tr>
+            <th *ngFor="let title of columnsTitle">{{ title }}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let row of data">
+            <td *ngFor="let cell of row">{{ cell }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
