--- a/FrontEnd/src/app/catan/catan-home/catan-home.component.scss
+++ b/FrontEnd/src/app/catan/catan-home/catan-home.component.scss
@@ -14,26 +14,30 @@ img {
   display: flex;
   flex-flow: column;
   justify-content: center;
-  max-height: 400px; /* 最大の高さを指定 */
-  overflow-y: auto; /* 縦スクロールを有効化 */
-  border: 1px solid #ddd;
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-
-  th,
-  td {
+  .table-container {
+    max-width: 1000px;
+    max-height: 1000px; /* 最大の高さを指定 */
+    overflow-x: auto; /* 縦スクロールを有効化 */
+    overflow-y: auto; /* 縦スクロールを有効化 */
     border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
 
-  thead th {
-    position: sticky;
-    top: 0;
-    background: white; /* ヘッダーを固定 */
-    z-index: 1;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    th,
+    td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+
+    thead th {
+      position: sticky;
+      top: 0;
+      background: white; /* ヘッダーを固定 */
+      z-index: 1;
+    }
   }
 }
