--- a/FrontEnd/src/app/catan/game/game.component.scss
+++ b/FrontEnd/src/app/catan/game/game.component.scss
@@ -51,7 +51,7 @@
   }
 
   .table-container {
-    max-width: 1500px;
+    max-width: 100%;
     max-height: 500px; /* 最大の高さを指定 */
     overflow-x: auto; /* 縦スクロールを有効化 */
     overflow-y: auto; /* 縦スクロールを有効化 */
