ゲーム一覧を追加

--- a/FrontEnd/src/app/catan/catan.component.html
+++ b/FrontEnd/src/app/catan/catan.component.html
@@ -4,7 +4,10 @@
   </div>
   <div class="header-link">
     <button mat-flat-button [routerLink]="['./game']">
-      <mat-icon>account_balance</mat-icon>ゲーム
+      <mat-icon>account_balance</mat-icon>ゲーム開始
+    </button>
+    <button mat-flat-button [routerLink]="['./game-list']">
+      <mat-icon>format_list_bulleted</mat-icon>ゲーム一覧
     </button>
     <button mat-flat-button [routerLink]="['./player']">
       <mat-icon>manage_accounts</mat-icon>プレイヤー
