開拓地等の入力を削除

--- a/FrontEnd/src/app/catan/game/playing-game/playing-game.component.html
+++ b/FrontEnd/src/app/catan/game/playing-game/playing-game.component.html
@@ -67,7 +67,7 @@
       </div>
       <div class="result-container">
         <div class="half-result">
-          <div class="result">
+          <!-- <div class="result">
             <button mat-icon-button (click)="BuildingLand(i)">
               <mat-icon [style.color]="setCatanColor(personalResult.color!)">gite</mat-icon>
             </button>
@@ -86,7 +86,7 @@
               <mat-icon [style.color]="setCatanColor(personalResult.color!)">style</mat-icon>
             </button>
             <h3>× {{ personalResult.card }}</h3>
-          </div>
+          </div> -->
         </div>
         <div class="half-result">
           <div class="result" *ngIf="personalResult.longestRoad == true">
