--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -42,7 +42,7 @@ mat-form-field {
 }
 
 mat-icon {
-  margin: 0px 5px 5px 0px;
+  // margin: 0px 5px 5px 0px;
   transform: scale(1.3);
   color: var(--mat-sys-primary);
 }
