--- a/FrontEnd/src/app/catan/game-list/game-list.component.html
+++ b/FrontEnd/src/app/catan/game-list/game-list.component.html
@@ -4,30 +4,11 @@
       <mat-icon>format_list_bulleted</mat-icon>
       <h2>ゲーム一覧</h2>
     </div>
-
-    <div class="sub-header-item">
-      <!-- 卒業生の表示可否 -->
-      <!-- <mat-slide-toggle [(ngModel)]="isViewGraduated" class="toggle" labelPosition="before"
-          >卒業生を表示
-        </mat-slide-toggle> -->
-      <!-- プレイヤー登録 -->
-      <!-- <button mat-flat-button (click)="openRegisterDialog()">登録</button> -->
-    </div>
   </div>
 
   <!-- GameResultテーブル -->
   <div class="gameResult-table-container">
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
-      <!-- アイコン -->
-      <!-- <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef>アイコン</th>
-          <td mat-cell *matCellDef="let element">
-            <div class="icon-container">
-              <img [src]="element.icon" class="icon" />
-            </div>
-          </td>
-        </ng-container> -->
-
       <!-- 日付 -->
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>日付</th>
@@ -50,6 +31,21 @@
       <ng-container matColumnDef="endTime">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>終了時間</th>
         <td mat-cell *matCellDef="let element">{{ element.endTime | date: 'HH:mm:ss' }}</td>
+      </ng-container>
+
+      <!-- アイコン -->
+      <ng-container matColumnDef="players">
+        <th mat-header-cell *matHeaderCellDef>アイコン</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngFor="let player of element.players; let isLast = last">
+            <img
+              [src]="player.icon"
+              class="icon"
+              style="border: 3px solid; margin: 5px; vertical-align: middle"
+              [style.color]="setCatanColor(player.color)"
+            />
+          </ng-container>
+        </td>
       </ng-container>
 
       <!-- 詳細 -->
@@ -76,3 +72,5 @@
     </mat-paginator>
   </div>
 </div>
+
+{{ dataSource.data | json }}
