--- a/FrontEnd/src/app/catan/result/result.component.html
+++ b/FrontEnd/src/app/catan/result/result.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="between sub-header">
     <div class="sub-header-item">
-      <mat-icon>account_balance</mat-icon>
-      <h2>ゲーム開始準備</h2>
+      <mat-icon>bar_chart</mat-icon>
+      <h2>ランキング</h2>
     </div>
   </div>
 
@@ -12,3 +12,5 @@
     </div>
   </div>
 </div>
+{{ players | json }}<br />
+{{ personalResults | json }}
