--- a/FrontEnd/src/app/catan/result/result.component.scss
+++ b/FrontEnd/src/app/catan/result/result.component.scss
@@ -1,10 +1,59 @@
-.player-container {
-  padding: 10px;
+.ranking-results-container {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.ranking-container {
   display: flex;
   align-items: center;
+  flex-flow: column;
   margin: 10px;
   
-  h3 {
-    margin-left: 10px;
+  h2{
+    margin: 5px;
+  }
+
+  .top-group{
+    .gold{
+      color: #e6c81edc;
+    }
+  }
+  .sub-group{
+    display: flex;
+    flex-flow: row;
+    
+    .silver{
+      color: #c0c0c0d7;
+    }
+    .bronze{
+      color: #cd853f;
+    }
+  }
+  
+  .group-container {
+    display: flex;
+    align-items: center;
+    flex-flow: column;
+
+    .player-container {
+      display: flex;
+      align-items: flex-start;
+      flex-flow: column;
+
+      .player{
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+
+        .info {
+          display: flex;
+          flex-flow: column;
+
+          h3{
+            margin: 0px 10px;
+          }
+        }
+      }
+    }
   }
 }
