--- a/FrontEnd/src/app/catan/result/result.component.html
+++ b/FrontEnd/src/app/catan/result/result.component.html
@@ -20,86 +20,36 @@
 
     <div class="ranking-container">
       <h2>勝率</h2>
-      <div class="player-container">
-        <div *ngFor="let win_rate of win_rate_ranking; let i = index" class="player">
-          <img [src]="win_rate?.player?.icon" class="icon" style="border: 3px solid" />
-          <div class="info">
-            <h3>{{ win_rate?.player?.name }}</h3>
-            <h3>{{ win_rate?.win_rate | number:'1.0-2' }}%</h3>
-          </div>
-        </div>
-      </div>
+      <ng-container *ngTemplateOutlet="rankingGroup;context: { $implicit: win_rate_ranking, value: 'win_rate', unit: '%' }"></ng-container>
     </div>
 
     <div class="ranking-container">
       <h2>総獲得ポイント</h2>
-      <div class="player-container">
-        <div *ngFor="let point of point_ranking; let i = index" class="player">
-          <img [src]="point?.player?.icon" class="icon" style="border: 3px solid" />
-          <div class="info">
-            <h3>{{ point?.player?.name }}</h3>
-            <h3>{{ point?.point}}</h3>
-          </div>
-        </div>
-      </div>
+      <ng-container *ngTemplateOutlet="rankingGroup;context: { $implicit: point_ranking, value: 'point', unit: '' }"></ng-container>
     </div>
 
     <div class="ranking-container">
       <h2>道ボーナス（回数）</h2>
-      <div class="player-container">
-        <div *ngFor="let road_count of road_count_ranking; let i = index" class="player">
-          <img [src]="road_count?.player?.icon" class="icon" style="border: 3px solid" />
-          <div class="info">
-            <h3>{{ road_count?.player?.name }}</h3>
-            <h3>{{ road_count?.road_count }}</h3>
-          </div>
-        </div>
-      </div>
+      <ng-container *ngTemplateOutlet="rankingGroup;context: { $implicit: road_count_ranking, value: 'road_count', unit: '回' }"></ng-container>
     </div>
 
     <div class="ranking-container">
       <h2>道ボーナス（確率）</h2>
-      <div class="player-container">
-        <div *ngFor="let road_rate of road_rate_ranking; let i = index" class="player">
-          <img [src]="road_rate?.player?.icon" class="icon" style="border: 3px solid" />
-          <div class="info">
-            <h3>{{ road_rate?.player?.name }}</h3>
-            <h3>{{ road_rate?.road_rate | number:'1.0-2' }}%</h3>
-          </div>
-        </div>
-      </div>
+      <ng-container *ngTemplateOutlet="rankingGroup;context: { $implicit: road_rate_ranking, value: 'road_rate', unit: '%' }"></ng-container>
     </div>
 
     <div class="ranking-container">
       <h2>騎士ボーナス（回数）</h2>
-      <div class="player-container">
-        <div *ngFor="let army_count of army_count_ranking; let i = index" class="player">
-          <img [src]="army_count?.player?.icon" class="icon" style="border: 3px solid" />
-          <div class="info">
-            <h3>{{ army_count?.player?.name }}</h3>
-            <h3>{{ army_count?.army_count }}</h3>
-          </div>
-        </div>
-      </div>
+      <ng-container *ngTemplateOutlet="rankingGroup;context: { $implicit: army_count_ranking, value: 'army_count', unit: '回' }"></ng-container>
     </div>
 
     <div class="ranking-container">
       <h2>騎士ボーナス（確率）</h2>
-      <div class="player-container">
-        <div *ngFor="let army_rate of army_rate_ranking; let i = index" class="player">
-          <img [src]="army_rate?.player?.icon" class="icon" style="border: 3px solid" />
-          <div class="info">
-            <h3>{{ army_rate?.player?.name }}</h3>
-            <h3>{{ army_rate?.army_rate | number:'1.0-2' }}%</h3>
-          </div>
-        </div>
-      </div>
+      <ng-container *ngTemplateOutlet="rankingGroup;context: { $implicit: army_rate_ranking, value: 'army_rate', unit: '%' }"></ng-container>
     </div>
 
   </div>
 </div>
-
-{{ aggregate | json }}
 
 <ng-template #rankingGroup let-ranking let-value="value" let-unit="unit">
   <!-- 1位グループ -->
