--- a/FrontEnd/src/app/catan/result/result.component.html
+++ b/FrontEnd/src/app/catan/result/result.component.html
@@ -69,9 +69,9 @@
       </div>
     </ng-container>
   </div>
-  <!-- 2位以下グループ -->
+  <!-- 2位以下グループ（3位まで） -->
   <div class="sub-group">
-    <ng-container *ngFor="let group of ranking.slice(1); let rank = index">
+    <ng-container *ngFor="let group of ranking.slice(1, 3); let rank = index">
       <div class="group-container" [ngClass]="{'silver': rank === 0, 'bronze': rank === 1}">
         <h2>{{ rank + 2 }}位</h2>
         <div class="player-container">
@@ -80,7 +80,7 @@
               [style.border]="'3px solid ' + (rank === 0 ? 'silver' : rank === 1 ? 'peru' : '#bbb')" />
             <div class="info">
               <h3>{{ player?.name }}</h3>
-              <h3>{{ player?.[value] }}{{unit}}</h3>
+              <h3>{{ player?.[value] | number:'1.0-2'}}{{unit}}</h3>
             </div>
           </div>
         </div>
