--- a/FrontEnd/src/app/catan/result/result.component.scss
+++ b/FrontEnd/src/app/catan/result/result.component.scss
@@ -7,8 +7,8 @@
   display: flex;
   align-items: center;
   flex-flow: column;
-  margin: 10px;
-  
+  margin: 5px 40px;
+
   h2{
     margin: 5px;
   }
