ヘッダーにランキングを追加

--- a/FrontEnd/src/app/catan/catan.component.html
+++ b/FrontEnd/src/app/catan/catan.component.html
@@ -3,6 +3,9 @@
     <a [routerLink]="['./']"><img src="images/header.png" /></a>
   </div>
   <div class="header-link">
+    <button mat-flat-button [routerLink]="['./']">
+      <mat-icon>bar_chart</mat-icon>ランキング
+    </button>
     <button mat-flat-button [routerLink]="['./game']">
       <mat-icon>account_balance</mat-icon>ゲーム開始
     </button>
