--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,12 +1,11 @@
-<!-- <div *ngIf="progress < 100">
+<div *ngIf="progress < 100" class="loading-container">
   <mat-spinner
     mode="determinate"
     [value]="progress">
   </mat-spinner>
-  <p>{{ progress | number: '1.0-0' }}% - サーバーに接続中...</p>
+  <p>　サーバーを起動中...</p>
 </div>
 
 <div *ngIf="progress === 100">
   <router-outlet></router-outlet>
-</div> -->
-<router-outlet></router-outlet>
+</div>
