--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.html
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.html
@@ -1,1 +1,7 @@
-<p>kohama-yujin works!</p>
+<iframe
+    src="https://1drv.ms/p/c/bede0a8824f31502/IQSrmXeWKPcpRYgIHXmifk8KAahotmW9JwoHUaj1a5I_qHM"
+    width="402"
+    height="327"
+    frameborder="0"
+    scrolling="no">
+</iframe>
