個人ページヘッダ追加

--- a/FrontEnd/src/app/catan/catan.component.html
+++ b/FrontEnd/src/app/catan/catan.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
   <div class="header-image">
-    <a [routerLink]="['./']"><img src="images/header.png" /></a>
+    <a [routerLink]="['./']"><img src="images/header_catan.png" /></a>
   </div>
   <div class="header-link">
     <button mat-flat-button [routerLink]="['./']">
