個人ページヘッダ追加

--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
@@ -3,13 +3,16 @@
     <a [routerLink]="['./']"><img src="images/header_kohama.png" /></a>
   </div>
   <div class="header-link">
-    <button [routerLink]="['./']">
+    <button mat-flat-button [routerLink]="['./']">
       トップ
     </button>
-    <button [routerLink]="['./programming']">
+    <button mat-flat-button [routerLink]="['./graduation-project']">
+      卒業研究
+    </button>
+    <button mat-flat-button [routerLink]="['./programming']">
       プログラミング
     </button>
-    <button [routerLink]="['./modeling']">
+    <button mat-flat-button [routerLink]="['./modeling']">
       モデリング
     </button>
   </div>
