--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
@@ -1,18 +1,18 @@
 .header-container {
-  height: 70px;
+  height: 100px;
   display: flex;
   align-items: center;
-  background-color: #eee;
+  background-color: #fafafa;
 
   .header-image {
     margin: 0px 30px;
     img {
-      height: 50px;
+      height: 80px;
     }
   }
 
   button {
-    background-color: #eee;
+    background-color: var(--primary-50);
     font-weight: bold;
   }
 }
