--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
@@ -2,7 +2,7 @@
   height: 100px;
   display: flex;
   align-items: center;
-  background-color: #fafafa;
+  background-color: #ffffffaa;
 
   .header-image {
     margin: 0px 30px;
@@ -14,5 +14,6 @@
   button {
     background-color: var(--primary-50);
     font-weight: bold;
+    margin-right: 20px;
   }
 }
