--- a/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
@@ -8,7 +8,11 @@
 
     <!-- 学年変更 -->
     <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
-        <mat-tab label="Bachelor"><app-bachelor></mat-tab>
+        <!-- 学部 -->
+        <mat-tab label="Bachelor">
+            <app-bachelor></app-bachelor>
+        </mat-tab>
+        <!-- 修士 -->
         <mat-tab label="Master">修士</mat-tab>
     </mat-tab-group>
 </div>
