bachelorページ追加

--- a/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.html
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.html
@@ -1,2 +1,11 @@
-<h2>Bachelor Graduation Project</h2>
-<iframe src="https://1drv.ms/p/c/bede0a8824f31502/IQSrmXeWKPcpRYgIHXmifk8KAahotmW9JwoHUaj1a5I_qHM" width="402" height="327" frameborder="0" scrolling="no"></iframe>
+<div class="container">
+    <h1>各超現実技術を用いたマスク着用時の発話口形状の再現</h1>
+    <h2>概要スライド</h2>
+    <p>※読み込みに数分かかる場合があります。</p>
+    <iframe src="https://1drv.ms/p/c/bede0a8824f31502/IQSrmXeWKPcpRYgIHXmifk8KAahotmW9JwoHUaj1a5I_qHM"
+        width="800"
+        height="500"
+        frameborder="0"
+        scrolling="no">
+    </iframe>
+</div>
