--- a/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
@@ -9,10 +9,10 @@
     <!-- 学年変更 -->
     <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
         <!-- 学部 -->
-        <mat-tab label="Bachelor">
+        <mat-tab label="学部（B4）">
             <app-bachelor></app-bachelor>
         </mat-tab>
         <!-- 修士 -->
-        <mat-tab label="Master">修士</mat-tab>
+        <mat-tab label="修士（M1,2）">修士</mat-tab>
     </mat-tab-group>
 </div>
