--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
@@ -2,7 +2,7 @@
   height: 100px;
   display: flex;
   align-items: center;
-  background-color: #000000aa;
+  background-color: #333;
 
   .header-image {
     margin: 0px 30px;
@@ -15,5 +15,6 @@
     background-color: var(--primary-50);
     font-weight: bold;
     margin-right: 20px;
+    color: #333;
   }
 }
