--- a/FrontEnd/src/app/kohama-yujin/top/top.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/top/top.component.scss
@@ -1,3 +1,8 @@
 .container{
     background-color: var(--primary-90);
+    img{
+        display: block;
+        margin: 0 auto;
+        height: 300px;
+    }
 }
