--- a/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
@@ -1,5 +1,6 @@
 .container{
-    padding: 50px;
+    width: 80%;
+    margin: 0 auto;
 }
 
 h1{
@@ -8,6 +9,6 @@ h1{
 
 iframe{
     display: block;
-    margin: 0 auto;
+    width: 100%;
     border: 3px solid var(--primary-50);
 }
