--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
@@ -2,7 +2,7 @@
   height: 80px;
   display: flex;
   align-items: center;
-  background-color: #eee;
+  background-color: var(--primary-50);
 
   .header-image {
     margin: 0px 30px;
@@ -15,6 +15,5 @@
     background-color: var(--primary-50);
     font-weight: bold;
     margin-right: 20px;
-    color: #eee;
   }
 }
