--- a/FrontEnd/src/app/kohama-yujin/top/top.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/top/top.component.scss
@@ -1,5 +1,5 @@
 .container{
-    background-color: var(--primary-90);
+    background-color: #f0f0f0;
     img{
         display: block;
         margin: 0 auto;
