--- a/FrontEnd/src/app/kohama-yujin/top/top.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/top/top.component.scss
@@ -1,8 +1,12 @@
 .container{
+    height: calc(100vh - 80px);  /* ヘッダーの高さを引いた分 */;
+    display: flex;
+    align-items: center;  /* 縦中央揃え */
+    justify-content: center;  /* 横中央揃え */
     background-color: #f0f0f0;
     img{
         display: block;
         margin: 0 auto;
-        height: 300px;
+        height: 100px;
     }
 }
