--- a/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
@@ -10,6 +10,6 @@ h1{
 iframe{
     display: block;
     width: 100%;
-    height: 600px;
+    height: 40vh;
     border: 3px solid var(--primary-50);
 }
