ヘッダー調整

--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
@@ -9,12 +9,12 @@
     <button mat-flat-button [routerLink]="['./graduation-project']">
       卒業研究
     </button>
-    <button mat-flat-button [routerLink]="['./programming']">
+    <!-- <button mat-flat-button [routerLink]="['./programming']">
       プログラミング
     </button>
     <button mat-flat-button [routerLink]="['./modeling']">
       モデリング
-    </button>
+    </button> -->
   </div>
 </div>
 
