--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
@@ -14,6 +14,6 @@
   button {
     background-color: var(--primary-50);
     font-weight: bold;
-    margin-right: 20px;
+    margin-left: 15px;
   }
 }
