--- a/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
@@ -1,15 +1,31 @@
-.container{
-    width: 80%;
-    margin: 0 auto;
-}
-
 h1{
     text-align: center;
 }
 
-iframe{
-    display: block;
-    width: 100%;
-    height: 40vh;
-    border: 3px solid var(--primary-50);
+.container{
+    width: 60%;
+    margin: 0 auto;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    padding-top: 80px;
+
+    iframe{
+        display: block;
+        width: 100%;
+        height: 50vh;
+        border: 3px solid #555;
+    }
+
+    h2{
+        border-bottom: 1px solid #aaa;
+        padding-bottom: 10px;
+        color: #555;
+    }
+
+    p, ul{
+        color: #555;
+    }
 }
