--- a/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
@@ -3,14 +3,23 @@
         <div class="sub-header-item">
             <mat-icon>view_in_ar</mat-icon>
             <h2>卒業研究</h2>
+            <div class="sub-header-item">
+                <button mat-button (click)="bachelor.scrollToTop()">テーマ</button>
+                <button mat-button (click)="bachelor.scrollToAbstract()">概要スライド</button>
+                <button mat-button (click)="bachelor.scrollToBackground()">目的・背景</button>
+                <button mat-button (click)="bachelor.scrollToRole()">自身の役割</button>
+                <button mat-button (click)="bachelor.scrollToMethod()">手法・工夫</button>
+                <button mat-button (click)="bachelor.scrollToAchievement()">成果</button>
+                <button mat-button (click)="bachelor.scrollToTechnique()">使用技術</button>
+            </div>
         </div>
     </div>
 
     <!-- 学年変更 -->
-    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
+    <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" (selectedTabChange)="onTabChange($event)">
         <!-- 学部 -->
         <mat-tab label="学部（B4）">
-            <app-bachelor></app-bachelor>
+            <app-bachelor #bachelor></app-bachelor>
         </mat-tab>
         <!-- 修士 -->
         <mat-tab label="修士（M1,2）">修士</mat-tab>
