--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
@@ -4,10 +4,10 @@
   </div>
   <div class="header-link">
     <button mat-flat-button [routerLink]="['./']">
-      トップ
+      <mat-icon>home</mat-icon>トップ
     </button>
     <button mat-flat-button [routerLink]="['./graduation-project']">
-      卒業研究
+      <mat-icon>biotech</mat-icon>卒業研究
     </button>
     <!-- <button mat-flat-button [routerLink]="['./programming']">
       プログラミング
