--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -89,6 +89,12 @@ mat-icon {
   margin-bottom: 20px;
   box-shadow: 0px 2px 5px #aaa;
 
+  /* 画面内に固定 */
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: var(--mat-sys-surface);
+  
   .sub-header-item {
     margin: 0 30px;
     display: flex;
