footer、gitアイコン追加

--- a/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/graduation-project.component.html
@@ -3,15 +3,21 @@
         <div class="sub-header-item">
             <mat-icon>view_in_ar</mat-icon>
             <h2>卒業研究</h2>
-            <div class="sub-header-item">
-                <button mat-button (click)="bachelor.scrollToTop()">テーマ</button>
-                <button mat-button (click)="bachelor.scrollToAbstract()">概要スライド</button>
-                <button mat-button (click)="bachelor.scrollToBackground()">目的・背景</button>
-                <button mat-button (click)="bachelor.scrollToRole()">自身の役割</button>
-                <button mat-button (click)="bachelor.scrollToMethod()">手法・工夫</button>
-                <button mat-button (click)="bachelor.scrollToAchievement()">成果</button>
-                <button mat-button (click)="bachelor.scrollToTechnique()">使用技術</button>
-            </div>
+        </div>
+        <div class="sub-header-item">
+            <button mat-button (click)="bachelor.scrollToTop()">テーマ</button>
+            <button mat-button (click)="bachelor.scrollToAbstract()">概要スライド</button>
+            <button mat-button (click)="bachelor.scrollToBackground()">背景</button>
+            <button mat-button (click)="bachelor.scrollToRole()">自身の役割・期間</button>
+            <button mat-button (click)="bachelor.scrollToMethod()">手法・工夫</button>
+            <button mat-button (click)="bachelor.scrollToAchievement()">成果</button>
+            <button mat-button (click)="bachelor.scrollToTechnique()">使用技術</button>
+        </div>
+        <div class="sub-header-item">
+            <a href="https://github.com/kohama-yujin/b4-lip-sync-ar" target="_blank" rel="noopener">
+                <img class="github-img" src="images/github/github-mark.png" />
+                <img class="github-img" src="images/github/GitHub_Logo.png" />
+            </a>
         </div>
     </div>
 
