--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.scss
@@ -17,3 +17,51 @@
     margin-left: 0px;
   }
 }
+
+.footer-container {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 10vh;
+  background-color: #333;
+
+  .footer-left p {
+    margin: 0;
+    color: #fff;
+  }
+
+  .footer-center {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+  }
+
+  .github-link {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+  }
+
+  .github-link .github-img {
+    height: 30px;
+  }
+  .github-label {
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  .github-link.school .github-label {
+    color: #79b6f2;
+  } // blue-ish
+
+  .github-link.personal .github-label {
+    color: #ffd700;
+  } // gold
+
+  .footer-right {
+    width: 150px;
+  }
+}
