--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -107,5 +107,13 @@ mat-icon {
     .toggle {
       margin-right: 30px;
     }
+
+    img {
+      height: 50px;
+    }
+
+    .github-img {
+      height: 30px;
+    }
   }
 }
