--- a/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.scss
@@ -3,8 +3,7 @@ h1{
 }
 
 .container{
-    width: 60%;
-    margin: 0 auto;
+    padding: 0px 20%;
 }
 
 .content{
@@ -25,6 +24,11 @@ h1{
         color: #555;
     }
 
+    h3{
+        margin-bottom: 0px;
+        color: #555;
+    }
+    
     p, ul{
         color: #555;
     }
