制作物を追加

--- a/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.html
+++ b/FrontEnd/src/app/kohama-yujin/graduation-project/bachelor/bachelor.component.html
@@ -19,8 +19,8 @@
         </p>
     </div>
     <div class="content role">
-        <h2>自身の役割・期間</h2>
-        <h1>全て一人で担当</h1>
+        <h2>開発期間・役割</h2>
+        <h1>一人で担当</h1>
         <p>
             引き継ぎ後は自分一人で、設計から実装までを担当し、特に研究室内に前例のなかった音声解析の導入にも個人で挑戦しました。
         </p>
