--- a/FrontEnd/src/app/kohama-yujin/top/top.component.html
+++ b/FrontEnd/src/app/kohama-yujin/top/top.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <img src="images/ratte_icon.png" alt="Top Image" />
+    <img src="images/ratte2d3d/ratte_icon.png" alt="Top Image" />
 </div>
