ボードゲームページ追加

--- a/FrontEnd/src/app/kohama-yujin/programming/board-game-management/board-game-management.component.html
+++ b/FrontEnd/src/app/kohama-yujin/programming/board-game-management/board-game-management.component.html
@@ -1,5 +1,7 @@
 <app-programming-template
     [title]="title"
+    [images]="images"
+    [image_descriptions]="image_descriptions"
     [abstract_description]="abstract_description"
     [period_title]="period_title"
     [period_description]="period_description"
