--- a/FrontEnd/src/app/kohama-yujin/programming/programming-template/programming-template.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/programming/programming-template/programming-template.component.scss
@@ -1,13 +1,58 @@
 h1{
-    text-align: center;
-}
-
-a{
-    margin: 0px auto;
+text-align: center;
 }
 
 .container{
     padding: 0px 20%;
+}
+
+.top{
+    display: flex;
+    flex-direction: column;
+
+    a{
+        margin: 0px auto;
+    }
+}
+
+.slider {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    color: #555;
+    
+    .img-div {
+        position: absolute;
+        width: 100%;
+        height: 50vh;
+        border-radius: 12px;
+        opacity: 0;
+        transition: opacity 0.5s ease;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .img-div.active {
+        opacity: 1;
+        position: relative;
+    }
+
+    .nav-btns {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+        gap: 50px;
+
+        mat-icon{
+            transform: scale(1.5);
+        }
+        h2 {
+            margin: 0px;
+        }
+    }
 }
 
 .content{
