ホーム編集

--- a/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
+++ b/FrontEnd/src/app/kohama-yujin/kohama-yujin.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="header-link">
     <button mat-flat-button [routerLink]="['./']">
-      <mat-icon>home</mat-icon>トップ
+      <mat-icon>home</mat-icon>ホーム
     </button>
     <button mat-flat-button [routerLink]="['./graduation-project']">
       <mat-icon>biotech</mat-icon>卒業研究
