--- a/FrontEnd/src/app/kohama-yujin/top/top.component.scss
+++ b/FrontEnd/src/app/kohama-yujin/top/top.component.scss
@@ -10,12 +10,14 @@
     align-items: center;  /* 縦中央揃え */
     justify-content: center;  /* 横中央揃え */
     padding: 0px 20%;
+    position: relative;
     p{
         color:#555;
     }
     button{
-        margin-top: 30px;
         transition: all 0.2s ease;
+        position: absolute;
+        bottom: 10vh;
     }
     button:hover{
         transform: translateY(5px);
@@ -36,6 +38,26 @@
     }
 }
 
+.profile{
+    padding: 0px 30%;
+}
+
+.skill{
+    .chart-container{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+    canvas{
+        max-height: 50vh !important;
+        max-width: 50% !important;
+    }
+}
+
 .even{
     background-color: #fafafa;
+}
+
+.last{
+    height: calc(100vh - 60px);  /* フッターの高さを引いた分 */;
 }
